[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
authors = [
  {email = "louismmx@gmail.com", name = "Louis Maddox"}
]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
dependencies = [
  "fastapi>=0.111.0",
  "tubeulator>=0.1.3",
  "polars>=0.20.31",
  "patito>=0.6.1",
  "uvicorn>=0.34.0",
]
description = "TfL open data server."
name = "tb8"
readme = "README.md"
requires-python = ">=3.10,<3.14"
version = "0.1.2"

[project.scripts]
serve = "tb8.main:serve"
